--- a/projetoBanco/banco/templates/home.html
+++ b/projetoBanco/banco/templates/home.html
@@ -8,25 +8,25 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Cadastre-me!</title>
+    <title>Cadastre-me</title>
   </head>
-  <form action="{%url 'listagem usuarios'%}" method="post">
+
   <body>
-     <nav style="background-color: rgb(3, 81, 55) !important;" class="navbar navbar-light bg-light">
-         <div class="container-fluid">
-             <span class="navbar-brand mb-0 h1">Cadastre-me</span>
-         </div>
-     </nav>
-
-    <div class = container> 
-      <h1>Cadastro de usuario</h1>
-        Nome<input name="name" class="form-control-sm" type="text">
-        Idade<input name="idade" class="form-control-sm" type="text">
-        <button class="form-control-sm">Enviar</button>
-    </div>
-  </form>
-
     
+    <nav style="background-color: aquamarine !important;" class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+          <span class="navbar-brand mb-0 h1" href="#">Cadastre-me</a>
+        </div>
+      </nav>
+        <form action="{% url 'listagem_usuarios' %}" method="post">
+            {% csrf_token %}
+            <div style="text-align: center;" class="container">
+                <h1>Cadastro de Usuario</h1>
+                Nome <input name="nome" class='form-control-sm' type="text">
+                Idade <input name="idade" class='form-control-sm' type="text">
+                <button class='form-control-sm'>Enviar</button>
+            </div>
+        </form>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
@@ -40,3 +40,20 @@
     -->
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- CONTINUAR NO TEMPO DO VIDEO 37:00 MINUTOS -->
