--- a/projeto/app/templates/radio.html
+++ b/projeto/app/templates/radio.html
@@ -23,14 +23,14 @@
 
             <hr>
                 <form action="{% url 'filtra_radio' %}" method="GET">
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="filter" value='id' >
+                    <div class="dropdown">
+                        <input class="form-check-input" type="button" name="filter" value='id' >
                         <label class="form-check-label" for="flexRadioDefault1">
                           Apenas ID
                         </label>
                       </div>
                       <div class="form-check">
-                        <input class="form-check-input" type="radio" name="filter" value='nome' >
+                        <input class="form-check-input" type="button" name="filter" value='nome' >
                         <label class="form-check-label" for="flexRadioDefault1">
                           Apenas Nome
                         </label>
@@ -45,6 +45,32 @@
                     <!-- <button class="btn btn-sucess" type="submit">Filtrar</button> -->
                 </form>
             </hr>
+
+            <hr>
+            <!-- <form action="{% url 'filtra_radio' %}" method="GET">
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="filter" value='id' >
+                    <label class="form-check-label" for="flexRadioDefault1">
+                      Apenas ID
+                    </label>
+                  </div>
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="filter" value='nome' >
+                    <label class="form-check-label" for="flexRadioDefault1">
+                      Apenas Nome
+                    </label>
+                  </div>
+                <hr>
+                      <Comentar novamente-- <form action="{% url 'buscar' %}" method="GET">->
+                    <input name="valor" class="p-1 border" type="text" value="">
+                    <button class='btn btn-sucess' type="submit">Procurar usuario</button>
+                      <Comentar novamente-- </form> ->
+                      <a href="{% url 'listagem_usuarios' %}" class="btn btn-light">Limpar</a>
+                </hr>
+                <Comentar novamente-- <button class="btn btn-sucess" type="submit">Filtrar</button>->
+            </form> -->
+        </hr>
+
 
 
 
