--- a/projeto/app/templates/radio.html
+++ b/projeto/app/templates/radio.html
@@ -2,58 +2,51 @@
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Script
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Script
     <script type="text/JavaScript" src="../assets/busca.js"></script> -->
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Cadastre-me</title>
+  <title>Cadastre-me</title>
 </head>
 
 <body>
 
 
-    <div class='container'>
+  <div class='container'>
 
-        <table>
+    <table>
 
-            <hr>
-                <form action="{% url 'filtra_radio' %}" method="GET">
-                    <div class="dropdown">
-                        <input class="form-check-input" type="button" name="filter" value='id' >
-                        <label class="form-check-label" for="flexRadioDefault1">
-                          Apenas ID
-                        </label>
-                      </div>
-                      <div class="form-check">
-                        <input class="form-check-input" type="button" name="filter" value='nome' >
-                        <label class="form-check-label" for="flexRadioDefault1">
-                          Apenas Nome
-                        </label>
-                      </div>
-                    <hr>
-                          <!-- <form action="{% url 'buscar' %}" method="GET"> -->
-                        <input name="valor" class="p-1 border" type="text" value="">
-                        <button class='btn btn-sucess' type="submit">Procurar usuario</button>
-                          <!-- </form> -->
-                          <a href="{% url 'listagem_usuarios' %}" class="btn btn-light">Limpar</a>
-                    </hr>
-                    <!-- <button class="btn btn-sucess" type="submit">Filtrar</button> -->
-                </form>
-            </hr>
+      <hr>
+        <form action="{% url 'filtra_radio' %}" method="GET">
+          <div class="form-check">
+          <select name="filter">
+            <!-- Apenas ID -->
+            <option value="id" class="form-check-input">ID</option>
+            <!-- Apenas Nome -->
+            <option value="nome"  class="form-check-input">NOME</option>
+          </select>
+        </div>
+          <input name="valor" class="p-1 border" type="text" value="">
+          <button class='btn btn-sucess' type="submit">Procurar usuario</button>
 
-            <hr>
-            <!-- <form action="{% url 'filtra_radio' %}" method="GET">
+          <a href="{% url 'listagem_usuarios' %}" class="btn btn-light">Limpar</a>
+          </hr>
+        </form>
+      </hr>
+
+      <hr>
+      <form action="{% url 'filtra_radio' %}" method="GET">
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="filter" value='id' >
                     <label class="form-check-label" for="flexRadioDefault1">
                       Apenas ID
                     </label>
-                  </div>
+                  </div> 
                   <div class="form-check">
                     <input class="form-check-input" type="radio" name="filter" value='nome' >
                     <label class="form-check-label" for="flexRadioDefault1">
@@ -61,15 +54,19 @@
                     </label>
                   </div>
                 <hr>
-                      <Comentar novamente-- <form action="{% url 'buscar' %}" method="GET">->
+                      <!--Comentar novamente-- <form action="{% url 'buscar' %}" method="GET">-->
                     <input name="valor" class="p-1 border" type="text" value="">
-                    <button class='btn btn-sucess' type="submit">Procurar usuario</button>
-                      <Comentar novamente-- </form> ->
-                      <a href="{% url 'listagem_usuarios' %}" class="btn btn-light">Limpar</a>
+
+                    <button class='btn btn-sucess' type="submit" style="background-color: greenyellow;">Procurar usuario</button>
+
+                   
+                 
+                    <a href="{% url 'listagem_usuarios' %}" class="btn btn-light" style="background-color: brown;">Limpar</a>
                 </hr>
-                <Comentar novamente-- <button class="btn btn-sucess" type="submit">Filtrar</button>->
-            </form> -->
-        </hr>
+                
+               
+            </form>
+      </hr>
 
 
 
@@ -79,53 +76,61 @@
 
 
 
-            
-
-            <!--FILTRO DE BUSCA -->
-
-            
-            
-            
-            <tr>
-                <th>id</th>
-                <th>usuarios</th>
-                <th>idade</th>
-                <th></th>
-            </tr>
-
-            {% for usuario in usuarios %}
-            <tr>
-                <td>{{usuario.id_usuario}}</td>
-                <td>{{usuario.nome}}</td>
-                <td>{{usuario.idade}}</td>
-                <td>
-                    
-                    <a href="/deleta_usuario/{{usuario.id_usuario}}/">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
-                            <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
-                            <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
-                          </svg>
-                    </a>
-                </td>
-                <td>
-                    <a href="/update/{{usuario.id_usuario}}/">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-pen" viewBox="0 0 16 16">
-                          <path d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001m-.644.766a.5.5 0 0 0-.707 0L1.95 11.756l-.764 3.057 3.057-.764L14.44 3.854a.5.5 0 0 0 0-.708l-1.585-1.585z"/>
-                        </svg>    
-                </td>
-            </tr>
-
-            {% empty %}
-            <tr>
-                <td colspan="3">Nenhum usuario registrado</td>
-            </tr>
 
 
-            {% endfor %}
+      <!--FILTRO DE BUSCA -->
 
 
-        </table>
-    </div>
+
+
+      <tr>
+        <th>id</th>
+        <th>usuarios</th>
+        <th>idade</th>
+        <th></th>
+      </tr>
+
+      {% for usuario in usuarios %}
+      <tr>
+        <td><input type="checkbox" name="check[]" value="{{ usuario.id_usuario }}"></td>
+        <td>{{usuario.id_usuario}}</td>
+        <td>{{usuario.nome}}</td>
+        <td>{{usuario.idade}}</td>
+        <td>
+
+          <a href="/deleta_usuario/{{usuario.id_usuario}}/">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-trash"
+              viewBox="0 0 16 16">
+              <path
+                d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z" />
+              <path
+                d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z" />
+            </svg>
+          </a>
+        </td>
+        <td>
+          <a href="/update/{{usuario.id_usuario}}/">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-pen"
+              viewBox="0 0 16 16">
+              <path
+                d="m13.498.795.149-.149a1.207 1.207 0 1 1 1.707 1.708l-.149.148a1.5 1.5 0 0 1-.059 2.059L4.854 14.854a.5.5 0 0 1-.233.131l-4 1a.5.5 0 0 1-.606-.606l1-4a.5.5 0 0 1 .131-.232l9.642-9.642a.5.5 0 0 0-.642.056L6.854 4.854a.5.5 0 1 1-.708-.708L9.44.854A1.5 1.5 0 0 1 11.5.796a1.5 1.5 0 0 1 1.998-.001m-.644.766a.5.5 0 0 0-.707 0L1.95 11.756l-.764 3.057 3.057-.764L14.44 3.854a.5.5 0 0 0 0-.708l-1.585-1.585z" />
+            </svg>
+        </td>
+        
+      </tr>
+
+      {% empty %}
+      <tr>
+        <td colspan="3">Nenhum usuario registrado</td>
+      </tr>
+
+
+      {% endfor %}
+      <button class='btn btn-sucess' type="submit" style="background-color:rgba(255, 10, 10, 0.774)">Deletar varios</button>
+
+
+    </table>
+  </div>
 </body>
 
 </html>
