--- a/projeto/app/templates/usuarios.html
+++ b/projeto/app/templates/usuarios.html
@@ -37,6 +37,7 @@
 
             {% for usuario in usuarios %}
             <tr>
+                <td><input type="checkbox" name="check[]" value="usuario.id_usuario"></td>
                 <td>{{usuario.id_usuario}}</td>
                 <td>{{usuario.nome}}</td>
                 <td>{{usuario.idade}}</td>
